# git-today

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  justfile
src/: args.rs  commit_analyzer.rs  display.rs  lib.rs  main.rs  structs.rs
test/: execute_tests.sh  setup_repos.sh
test/expected/: a.call  a.out  aa.call  aa.out  b.call  b.out  ba.call  ba.out  c.call  c.out  ca.call  ca.out  d.call  d.out  da.call  da.out  e.call  e.out  ea.call  ea.out  f.call  f.out  fa.call  fa.out
