[package]
name = "git-today"
version = "0.1.0"
edition = "2024"
authors = ["bitSheriff"]
description = "A tool to recap your daily git work"
homepage = "https://bitsheriff.dev/projects/git-today/"
readme = "README.md"
repository = "https://github.com/bitSheriff/git-today"
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.20.2"
