[package]
name = "git-today"
version = "0.1.3"
edition = "2024"
authors = ["bitSheriff"]
description = "A tool to recap your daily git work"
homepage = "https://bitsheriff.dev/projects/git-today/"
readme = "README.md"
repository = "https://github.com/bitSheriff/git-today"
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.2.0"
git2 = "0.20.2"
