[package]
name = "git-today"
version = "0.1.7"
edition = "2024"
authors = ["bitSheriff"]
description = "A tool to recap your daily git work"
homepage = "https://bitsheriff.dev/projects/git-today/"
readme = "README.md"
repository = "https://github.com/bitSheriff/git-today"
license = "MIT"

[lib]
name = "git_today"
path = "src/lib.rs"

[[bin]]
name = "git-today"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.2.0"
git2 = "0.20.2"
